Added buildspec.yml for AWS code pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.3.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>spring-boot</artifactId>
+	<groupId>com.aws</groupId>
+	<artifactId>trading-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot</name>
-	<description>Demo project for Spring Boot</description>
+	<name>trading-app</name>
+	<description>A very simple trading app for demo purposes</description>
 
 	<properties>
 		<java.version>11</java.version>
