--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,3 +29,6 @@ artifacts:
     #- template-export.yml
     #- template-configuration.json
     - target/trading-app-0.0.1-SNAPSHOT.jar
+    - sh/start-web-server.sh
+    - sh/stop-web-server.sh
+    - sh/before-install.sh
