Introduced SSM params

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>aws-java-sdk-sts</artifactId>
 			<version>1.11.885</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ssm -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-ssm</artifactId>
+			<version>1.11.887</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
