Added cloud watch logs

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
 			<version>1.11.892</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-logs -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-logs</artifactId>
+			<version>1.11.892</version>
+		</dependency>
+
+
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
