--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,10 @@ hooks:
     - location: stop-web-server.sh
       timeout: 300
       runas: root
+  BeforeInstall:
+    - location: before-install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: after-install.sh
       timeout: 300
