--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,6 +31,7 @@ artifacts:
     - target/trading-app-0.0.1-SNAPSHOT.jar
     - sh/start-web-server.sh
     - sh/stop-web-server.sh
+    - sh/before-install.sh
     - sh/after-install.sh
     - sh/validate-service.sh
     - linux-service/trading-app.service
